OrderBook | created std::vector based order book based on cppcon talk https://www.youtube.com/watch?v=sX2nF1fW7kI&list=PL7UlVIgtlp4K___crzRfVrZA9WhC9Ppls&index=29

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -1,9 +1,5 @@
-#Set CXX as a env variable
-CXX = g++-11
-#CXX = g++
-#CXX = clang++
 LIBS = -lpthread
-CXXFLAGS = -g -O2 -Werror -std=c++23 -I../sp/
+CXXFLAGS = -g -O3 -Werror -std=c++23 -I../sp/
 
 #Warning flags 
 # Pending Winfinite-recursion, 
@@ -26,6 +22,7 @@ CXXFLAGS += -fsanitize=address \
 			-fsanitize-recover=all \
 			-fno-omit-frame-pointer \
 			-fstack-protector-all \
+			-Wno-float-equal \
 
 LDDFLAGS = 	-fsanitize=address \
 		   	-fsanitize=undefined \
