--- a/gtest/CMakeLists.txt
+++ b/gtest/CMakeLists.txt
@@ -36,11 +36,10 @@ target_link_libraries(
 )
 
 set(SANITIZE_FLAGS
-  #-fsanitize=address,leak,undefined
-  #-fsanitize-address-use-after-scope
-  #-fsanitize-recover=all
-  #-static-libasan
-
+  -fsanitize=address,leak,undefined
+  -fsanitize-address-use-after-scope
+  -fsanitize-recover=all
+  -static-libasan
 )
 
 target_compile_options(
