Measure CPU Cache reading latencies
~/src/sprc/sp/experiments   master ±  make cache && ../output/CacheLatencyBenchmark
/usr/lib/llvm-19/bin/clang++  CpuCacheLatencyMeasure.cpp -lpthread -o ../output/CacheLatencyBenchmark
Note: For accurate results, run with:
sudo cpupower frequency-set -g performance

L1 cache working set: 32KB, slots(size/cacheline): 512
L1 cache average read latency: 4.12795 ns

L2 cache working set: 256KB, slots(size/cacheline): 4096
L2 cache average read latency: 7.71987 ns

L3 cache working set: 9216KB, slots(size/cacheline): 147456
L3 cache average read latency: 37.4528 ns

RAM working set: 65536KB, slots(size/cacheline): 1048576
RAM average read latency: 73.8005 ns

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -15,29 +15,35 @@ CXXFLAGS += -Wall \
 
 #Instrumentation-Options flags
 # Pending -fsanitize=shadow-call-stack, -fstack-check
-CXXFLAGS += -fsanitize=address \
-			-fsanitize=undefined \
-			-fsanitize=leak \
-			-fsanitize-address-use-after-scope \
-			-fsanitize-recover=all \
-			-fno-omit-frame-pointer \
-			-fstack-protector-all \
-			-Wno-float-equal \
-
-LDDFLAGS = 	-fsanitize=address \
-		   	-fsanitize=undefined \
-		   	-fsanitize=leak \
-		   	-fsanitize-address-use-after-scope \
-		   	-fsanitize-recover=all \
-			-fno-omit-frame-pointer \
+#CXXFLAGS += -fsanitize=address \
+#			-fsanitize=undefined \
+#			-fsanitize=leak \
+#			-fsanitize-address-use-after-scope \
+#			-fsanitize-recover=all \
+#			-fno-omit-frame-pointer \
+#			-fstack-protector-all \
+#			-Wno-float-equal \
+#
+#LDDFLAGS = 	-fsanitize=address \
+#		   	-fsanitize=undefined \
+#		   	-fsanitize=leak \
+#		   	-fsanitize-address-use-after-scope \
+#		   	-fsanitize-recover=all \
+#			-fno-omit-frame-pointer \
 		   
 
 TARGET = experiment
+TARGET2 = CacheLatencyBenchmark
 OUTDIR = ../output
 
 .PHONY: default all clean
 
+.PHONY: cache
+
 default:	$(TARGET)
+
+# Convenience target to build only the CacheLatencyBenchmark
+cache:	$(TARGET2)
 all:	default
 
 OBJECTS = $(patsubst %.cpp, $(OUTDIR)/%.o, $(wildcard *.cpp))
@@ -51,6 +57,9 @@ $(OUTDIR)/%.o:	%.cpp $(HEADERS)
 
 $(TARGET):	$(OBJECTS)
 	$(CXX) $(LDDFLAGS) $(OBJECTS) $(LIBS) -o $(OUTDIR)/$@
+
+$(TARGET2):	CpuCacheLatencyMeasure.cpp
+	$(CXX) $(LDDFLAGS) $< $(LIBS) -o $(OUTDIR)/$@
 
 clean:
 	rm $(OBJECTS)
