Measure CPU cache latencies with latest compiler flags  ~/src/sprc/sp/experiments   master ±  make cache && ../output/CacheLatencyBenchmark
/usr/lib/llvm-19/bin/clang++ -g -O3 -Werror -std=c++23 -I../sp/ -Wall -Wextra -Wnull-dereference -Wshift-overflow -Wno-div-by-zero -Wfloat-equal -Wshadow -Wfree-nonheap-object   CpuCacheLatencyMeasure.cpp -lpthread -o ../output/CacheLatencyBenchmark
Note: For accurate results, run with:
sudo cpupower frequency-set -g performance

L1 cache working set: 32KB, slots(size/cacheline): 512
L1 cache average read latency: 2.69428 ns

L2 cache working set: 256KB, slots(size/cacheline): 4096
L2 cache average read latency: 7.6512 ns

L3 cache working set: 9216KB, slots(size/cacheline): 147456
L3 cache average read latency: 36.1098 ns

RAM working set: 65536KB, slots(size/cacheline): 1048576
RAM average read latency: 72.322 ns

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -59,7 +59,7 @@ $(TARGET):	$(OBJECTS)
 	$(CXX) $(LDDFLAGS) $(OBJECTS) $(LIBS) -o $(OUTDIR)/$@
 
 $(TARGET2):	CpuCacheLatencyMeasure.cpp
-	$(CXX) $(LDDFLAGS) $< $(LIBS) -o $(OUTDIR)/$@
+	$(CXX) $(CXXFLAGS) $(LDDFLAGS) $< $(LIBS) -o $(OUTDIR)/$@
 
 clean:
 	rm $(OBJECTS)
